public/stylesheets/style.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
html {font-size: 1em;}

body {
  background-color: white;
  font-family: 'Libre Baskerville', serif;
  font-weight: 400;
  line-height: 1.45;
  color: #333;
}

p {margin-bottom: 1.3em;}

h1, h2, h3, h4 {
  margin: 1.414em 0 0.5em;
  font-weight: inherit;
  line-height: 1.2;
}

h1 {
  margin-top: 0;
  font-size: 3.998em;
}

h2 {font-size: 2.827em;}

h3 {font-size: 1.999em;}

h4 {font-size: 1.414em;}

small, .font_small {font-size: 0.707em;}

@import url(https://fonts.googleapis.com/css?family=Open+Sans);

body {
  padding: 50px;
  font: 14px Open Sans, sans-serif;
}

a:hover {
  cursor: pointer;
}

header {
  padding: 5px;
  line-height: 50px;
  top: 0px;
  left: 0px;
  right: 0px;
  position: fixed;
  width: 100%;
  height: 50px;
  background-color: #f6f6f6;
  border: 1px solid #d3d3d3;
  color: #777777;
}

.logo {
  font-size: 1.999em;
}

.submitPost {
  margin-left: 30px;
  color: #777777;
  font-family: Open Sans, sans-serif;
}

.plus {
  font-size: 30px;
}

.submit {
  font-size: 20px;
}

.search {
  margin-left: 30px;
  width: 200px;
  height: 30px;
  border-radius: 3px;
}

.sortby {
  margin-left: 30px;
  margin-right: 750px;
  width: 100px;
  float: right;
}

.drop {
  margin-left: 10px;
}

.post {
  margin: 0 auto;
  margin-top: 30px;
  padding: 10px;
  background-color: #f6f6f6;
  border: 1px solid #d3d3d3;
  color: #777777;
  width: 90%;
  height: 200px;
  border-radius: 3px;
  overflow: auto;
}

.title {
  font-size: 16px;
  color: #666666;
}

.photo {
  height: 190px;
  width: 230px;
  float: left;
  margin-right: 10px;
}

div.form {
  margin: 0 auto;
  margin-top: 20px;
  width: 90%;
  padding: 10px;
}

label.form {
  font-weight: bold;
  color: #666666;
}

input.form {
  width: 100%;
  height: 30px;
  border-radius: 3px;
}

input.submit {
  font-size: 14px;
  height: 30px;
  width: 100px;
  color: #666666;
  background-color: white;
  border-radius: 3px;
}

.author {
  width: 100%;
  text-align: right;
}

.postFooter {
  float: left;
  margin-left: 10px;
}

.form input.ng-invalid {
   background-color: #FA787E;
 }

 .form input.ng-valid {
   background-color: #78FA89;
 }

 .postHeader {
   float: left;
   margin-left: 10px;
 }

 span.postHeader {
   width: 80%;
   height: 20px;
 }

 .red {
   color: #FA787E;
 }

 .green {
   color: #78FA89;
 }
.first {
  margin-left: 0px;
}
 .last {
   font-weight: bolder;
 }
 .comments {
   float: right;
   width: 80%;
 }

 .commentAuthor {
   font-weight: bolder;
   float: left;
 }

.commentText {
  float: left;
}

input.commentForm {
  margin-left: 5px;
  border-radius: 3px;
  height: 20px;
  font-weight: normal;
}

label.commentForm {
  margin-left: 5px;
  font-weight: bolder;
}

.addCommentForm {
  width: 80%;
  float: right;
}

.commentForm .last {
  margin-right: 5px;
}

.dropdown-container {
  border: 1px solid black;
  width: 100px;
  height: 40px;
}

.sortOption {
  border: 1px solid #666666;
  margin-left: 30px;
  margin-right: 750px;
  width: 100px;
  float: right;
  background-color: white;
  height: 40px;
  text-align: center;
  line-height: 40px;
}

.postRepeat.ng-enter {
  transition:0.75s linear all;
  opacity:0;
}

.postRepeat.ng-enter-active {
  opacity:1;
}
.postRepeat.ng-enter-stagger {
  transition-delay: .1s;
}
.postRepeat.ng-leave-stagger {
  transition-delay: .1s;
}
.postRepeat.ng-leave {
  transition:0.75s linear all;
  opacity:1;
}
.postRepeat.ng-leave-active {
  opacity:0;
}

